--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "coc-actions": ">=1.2.1",
     "coc-highlight": ">=1.2.5",
+    "coc-json": ">=1.2.4",
     "coc-python": ">=1.2.7"
   }
 }
