--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
