--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,6 +1,23 @@
 env:
   TERM: xterm-256color
 
+# Font configuration (changes require restart)
+font:
+  size: 10
+  # The normal (roman) font face to use.
+  normal:
+    family: SauceCodePro Nerd Font
+    # Style can be specified to pick a specific face.
+    style: regular
+
+  # The bold font face
+  bold:
+    family: SauceCodePro Nerd Font
+
+  # The italic font face
+  italic:
+    family: SauceCodePro Nerd Font
+
 
 # Colors (Solarized Dark)
 colors:
