--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,10 @@
+# correct TERM colors
 set  -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+
+# set status line colors
+set -g status-bg black
+set -g status-fg white
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
