--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,12 @@ bind - split-window -h
 unbind '"'
 unbind %
 
+# Mouse support
+set -g mouse on
+
+# Unset ESC time
+set -sg escape-time 0
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
