--- a/.ideavimrc
+++ b/.ideavimrc
@@ -6,10 +6,10 @@ set noerrorbells
 let mapleader=","
 
 "--- Faster window navigation
-nnoremap <C-h> <C-w>h
-nnoremap <C-j> <C-w>j
-nnoremap <C-k> <C-w>k
-nnoremap <C-l> <C-w>l
+map <C-h> <C-w>h
+map <C-j> <C-w>j
+map <C-k> <C-w>k
+map <C-l> <C-w>l
 
 "--- Use system clipboard with leader
 noremap <Leader>y "+y
