Misc config changes

--- a/.ssh/config
+++ b/.ssh/config
@@ -2,5 +2,12 @@ Host gh
   HostName github.com
   User git
 
+Host watchtower
+  Hostname 192.168.50.194
+
 Host feldspar
-  HostName 192.168.50.13
+  Hostname 192.168.50.196
+
+Host tower
+  Hostname 192.168.50.192
+  User root
