--- a/.ideavimrc
+++ b/.ideavimrc
@@ -5,7 +5,7 @@ set wildmenu                            " Visual autocomplete for command menu
 set showmatch                           " Show matching parenthesis
 set laststatus=2                        " Always display status line
 set noshowmode                          " Don't show INSERT, NORMAL modes
-set noerrorbells                        " No error beep
+set visualbell                          " No error beep
 set number relativenumber               " Hybrid number line
 
 " Plugins
