--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -1,1 +1,25 @@
 g script-binding videoclip-menu-open
+
+a            script-binding mpvacious-menu-open
+
+Ctrl+n       script-binding mpvacious-export-note
+
+Ctrl+m       script-binding mpvacious-update-last-note
+Ctrl+M       script-binding mpvacious-overwrite-last-note
+
+Ctrl+c       script-binding mpvacious-copy-sub-to-clipboard
+Ctrl+t       script-binding mpvacious-autocopy-toggle
+
+H            script-binding mpvacious-sub-seek-back
+L            script-binding mpvacious-sub-seek-forward
+
+Alt+h        script-binding mpvacious-sub-seek-back-pause
+Alt+l        script-binding mpvacious-sub-seek-forward-pause
+
+Ctrl+h       script-binding mpvacious-sub-rewind
+Ctrl+H       script-binding mpvacious-sub-replay
+Ctrl+L       script-binding mpvacious-sub-play-up-to-next
+
+Ctrl+v       script-binding mpvacious-secondary-sid-toggle
+Ctrl+k       script-binding mpvacious-secondary-sid-prev
+Ctrl+j       script-binding mpvacious-secondary-sid-next
