--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule ".vim"]
 	path = .vim
 	url = git@github.com:davafons/.vim
+[submodule "/home/davafons/.config/mpv/scripts/videoclip"]
+	path = /home/davafons/.config/mpv/scripts/videoclip
+	url = git@github.com:davafons/videoclip
+[submodule "/home/davafons/.config/mpv/scripts/subs2srs"]
+	path = /home/davafons/.config/mpv/scripts/subs2srs
+	url = git@github.com:Ajatt-Tools/mpvacious.git
