--- a/.ssh/config
+++ b/.ssh/config
@@ -3,11 +3,15 @@ Host gh
   User git
 
 Host watchtower
-  Hostname 192.168.50.194
+  Hostname watchtower.local
 
 Host feldspar
-  Hostname 192.168.50.196
+  Hostname feldspar.local
 
 Host tower
-  Hostname 192.168.50.192
+  Hostname tower.local
   User root
+
+Host belabox
+  Hostname belabox.local
+  User user
