--- a/.ssh/config
+++ b/.ssh/config
@@ -12,6 +12,10 @@ Host tower
   Hostname tower.local
   User root
 
+Host qtower
+  Hostname qtower.local.davafons.com
+  User davafons
+
 Host belabox
   Hostname belabox.local
   User user
