--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -33,13 +33,13 @@ TERM = "xterm-256color"
 size = 10
 
 [font.bold]
-family = "MesloLGS NF"
+family = "SauceCodePro Nerd Font Mono"
 
 [font.italic]
-family = "MesloLGS NF"
+family = "SauceCodePro Nerd Font Mono"
 
 [font.normal]
-family = "MesloLGS NF"
+family = "SauceCodePro Nerd Font Mono"
 style = "regular"
 
 [window.padding]
