--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -49,17 +49,17 @@ markup=pango
 
 [terminal]
 full_text=  
-color=#807dfe
+color=#FFFFFF
 command=i3-msg -q exec xfce4-terminal
 
 [browser]
 full_text=  
-color=#ff7f81
+color=#FFFFFF
 command=i3-msg -q exec firefox
 
 [files]
 full_text=  
-color=#7f3fbf
+color=#FFFFFF
 command=i3-msg -q exec thunar ~/
 
 #[mail]
