Hostname specific i3 config and nvim

--- a/i3/.config/i3/i3blocks/omen.conf
+++ b/i3/.config/i3/i3blocks/omen.conf
@@ -117,12 +117,12 @@ command=~/.config/i3/scripts/bandwidth2
 interval=persist
 
 # Battery indicator
-# [battery]
-# command=~/.config/i3/scripts/battery2
+[battery]
+command=~/.config/i3/scripts/battery2
 # for alternative battery script  change to battery1
 # change this to battery-pinebook-pro if you are running on pinebook-pro
-# label=
-# interval=30
+label=
+interval=30
 
 [simple-2]
 full_text=: :
@@ -155,15 +155,15 @@ command=~/.config/i3/scripts/keyhint
 # https://wiki.archlinux.org/title/CPU_frequency_scaling#power-profiles-daemon
 
 #set power-profile
-# [ppd_menu]
-# full_text= 
-# command=~/.config/i3/scripts/power-profiles
-# color=#407437
+[ppd_menu]
+full_text= 
+command=~/.config/i3/scripts/power-profiles
+color=#407437
 
-#Show the current power-profile
-# [ppd-status]
-# command=~/.config/i3/scripts/ppd-status
-# interval=5
+# Show the current power-profile
+[ppd-status]
+command=~/.config/i3/scripts/ppd-status
+interval=5
 
 [time]
 #label= 
