--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -211,6 +211,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id ~/.config/i3/scripts/volume_b
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
+
 bindsym $mod+b focus up
 bindsym $mod+o focus right
 
@@ -505,7 +506,7 @@ client.urgent		    	$urgentred	$urgentred	$white		$yellowbrown	$yellowbrown
 # (plus the system information i3status finds out, if available)
 bar {
 		font pango: Noto Sans Regular 10
-		status_command i3blocks -c ~/.config/i3/i3blocks.conf
+		status_command i3blocks -c ~/.config/i3/i3blocks/$(hostname).conf || i3blocks -c ~/.config/i3/i3blocks/default.conf
 	    	position bottom
 #	    	i3bar_command i3bar --transparency
 # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
@@ -587,3 +588,11 @@ bindsym $mod+t exec --no-startup-id rofi -show window \
 #exec --no-startup-id greenclip daemon>/dev/null
 #bindsym $mod+c exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard \
 #		-config ~/.config/rofi/rofidmenu.rasi
+
+#############################################
+# Host-specific configuration includes:     #
+#############################################
+
+# Include host-specific configuration based on hostname
+# This will dynamically include the config file matching the current hostname
+exec_always --no-startup-id ~/.config/i3/scripts/load-host-config
