--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,32 +11,20 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# split panes using v and h
-bind v split-window -v
-bind h split-window -h
-
 # Unbind tmux suspend
-unbind C-z
+# unbind C-z
 
 # Mouse support
 set -g mouse on
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @continuum-restore 'on'
-set -g @plugin 'omerxx/tmux-sessionX'
-
-# Vim movement
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
-set -g @vim_navigator_mapping_right "C-Right C-l"
-set -g @vim_navigator_mapping_up "C-k"
-set -g @vim_navigator_mapping_down "C-j"
-set -g @vim_navigator_mapping_prev ""  # removes the C-\ bindingk
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @continuum-restore 'on'
+# set -g @plugin 'omerxx/tmux-sessionX'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
