Fix tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,21 +1,75 @@
+##### PREFIX REMAP #####
+unbind C-b
+set-option -g prefix C-a
+bind C-a send-prefix
+
+##### PANE ZOOM #####
+unbind-key z
+bind f resize-pane -Z  # Toggle zoom with f
+
+##### GENERAL SETTINGS #####
+set -g mouse on
+set -g history-limit 10000
+set -g base-index 1                  # Windows start at 1
+
+set -g renumber-windows on          # Renumber windows when one is closed
+set -sg escape-time 0
+set -g status-interval 5            # Status bar update interval
+set-environment -g 'IGNOREEOF' 1
+set-option -a terminal-features 'alacritty:RGB'
+set-option -wg monitor-activity on  # Monitor window activity
+
 # correct TERM colors
 set  -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-
 # set status line colors
 set -g status-bg black
 set -g status-fg white
 
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+##### RELOAD CONFIG #####
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-# Unbind tmux suspend
-# unbind C-z
+##### VI COPY MODE #####
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi : run "tmux split-window -h -l 3 -b 'while [ \$SECONDS -lt 10 ]; do seq $(tput lines) -1 1; sleep 1; clear; done'; tmux last-pane; sleep 0.15" \; command-prompt -p "Go to line:" "send-keys -X goto-line %%;"
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi y send -X copy-pipe "xclip -in -selection clipboard" \; send -X clear-selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# Mouse support
-set -g mouse on
+##### SMART WINDOW & PANE BEHAVIOR #####
+bind '%' split-window -c '#{pane_current_path}' -h  # Horizontal split in current dir
+bind '"' split-window -c '#{pane_current_path}'     # Vertical split in current dir
+
+bind c new-window -c '#{pane_current_path}'         # New window in current dir
+
+##### WINDOW NAVIGATION #####
+bind S-Left swap-window -t -1 \; select-window -t -1
+bind S-Right swap-window -t +1 \; select-window -t +1
+
+##### SWITCH SESSIONS #####
+bind e display-popup -E "\
+  tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+  sed '/^$/d' |\
+  fzf --reverse --header='Change to tmux session' |\
+  xargs tmux switch-client -t"
+
+##### COPY MODE HIGHLIGHTING #####
+set-option -wg copy-mode-match-style "bg=#1a1b26,fg=#565f89"
+set-option -wg copy-mode-current-match-style "bg=#1a1b26,fg=#565f89"
+
+##### STATUS BAR #####
+set -g status-style bg=default
+
+set -g window-status-format '#I:#W#F'
+set -g window-status-current-format '#[fg=white,bold][#I:#W]'
+
+# Prefix indicator and session name on left
+set -g status-left "#{?client_prefix,#[bg=#565f89],#[bg=default]}[#{session_name}] "
+
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
