--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -10,6 +10,8 @@ input {
   repeat_rate = 40
   repeat_delay = 600
 
+  sensitivity = -0.3
+
   # Start with numlock on by default
   numlock_by_default = true
 
