--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -1,19 +1,26 @@
 # Control your input devices
 # See https://wiki.hypr.land/Configuring/Variables/#input
+
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
   kb_layout = us
+  kb_variant = intl
   kb_options = compose:caps # ,grp:alts_toggle
+
+  accel_profile = adaptive
+
+  sensitivity = -0.8
+  force_no_accel = 0
 
   # Change speed of keyboard repeat
   repeat_rate = 40
   repeat_delay = 600
 
-  sensitivity = -0.3
-
   # Start with numlock on by default
   numlock_by_default = true
+
+  float_switch_override_focus = 0
 
   # Increase sensitity for mouse/trackpack (default: 0)
   # sensitivity = 0.35
@@ -28,6 +35,10 @@ input {
     # Control the speed of your scrolling
     scroll_factor = 0.4
   }
+}
+
+cursor {
+ no_warps = true
 }
 
 # Scroll faster in the terminal
