--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -72,7 +72,7 @@ set -g status-left "#{?client_prefix,#[bg=#565f89],#[bg=default]}[#{session_name
 
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -81,4 +81,4 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'omerxx/tmux-sessionX'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# run -b '~/.tmux/plugins/tpm/tpm'
