Configure laptop with hyprland

--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -16,7 +16,7 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, Claude, exec, omarchy-launch-webapp "https://claude.ai"
-bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
 # bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
 # bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
@@ -29,9 +29,24 @@ bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compo
 unbind = SUPER, D
 bindd = SUPER, D, Launch apps, exec, walker -p "Start…"
 
-unbind = SUPER, SPACE
+# unbind = SUPER, SPACE
 bindd = SUPER SHIFT, D, Omarchy menu, exec, omarchy-menu
 bindd = SUPER SHIFT, E, Power menu, exec, omarchy-menu system
+
+
+# Window movement
+bind = SUPER, H, movefocus, l
+bind = SUPER, L, movefocus, r
+bind = SUPER, K, movefocus, u
+bind = SUPER, J, movefocus, d
+
+bind = SUPER SHIFT, H, movewindow, l
+bind = SUPER SHIFT, L, movewindow, r
+bind = SUPER SHIFT, K, movewindow, u
+bind = SUPER SHIFT, J, movewindow, d
+
+bind = SUPER, G, splitratio, -0.48
+
 
 # # Define which workspaces belong to which monitors
 workspace = 1, monitor:DP-3
