--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -8,11 +8,6 @@ input {
   kb_variant = intl
   kb_options = compose:caps # ,grp:alts_toggle
 
-  accel_profile = adaptive
-
-  sensitivity = -0.8
-  force_no_accel = 0
-
   # Change speed of keyboard repeat
   repeat_rate = 40
   repeat_delay = 600
@@ -35,6 +30,19 @@ input {
     # Control the speed of your scrolling
     scroll_factor = 0.4
   }
+}
+
+device {
+  name = elecom-ist-pro-mouse
+
+  accel_profile = adaptive
+  sensitivity = -0.8
+}
+
+# Change keyboard mappings on laptop
+device {
+  name = at-translated-set-2-keyboard
+  kb_options = caps:ctrl_modifier,altwin:swap_alt_win
 }
 
 cursor {
