--- a/hypr/.config/hypr/monitors.conf
+++ b/hypr/.config/hypr/monitors.conf
@@ -12,6 +12,9 @@ env = GDK_SCALE,1.75
 monitor=,preferred,auto,1.666667
 monitor=DP-3,3840x2160@144,auto,1.666667
 
+# Laptop
+monitor=eDP-2,2560x1440@160,auto,1.6
+
 # Straight 1x setup for low-resolution displays like 1080p or 1440p
 # env = GDK_SCALE,1
 # monitor=,preferred,auto,1
