Move tmux config to .config folder

--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -18,7 +18,7 @@ input {
   float_switch_override_focus = 0
 
   # Increase sensitity for mouse/trackpack (default: 0)
-  # sensitivity = 0.35
+  sensitivity = -0.8
 
   touchpad {
     # Use natural (inverse) scrolling
