--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
-##### PREFIX REMAP #####
 unbind C-b
 set-option -g prefix C-a
+# Double prefix sends prefix to application
 bind C-a send-prefix
 
 ##### PANE ZOOM #####
@@ -19,15 +19,15 @@ set-environment -g 'IGNOREEOF' 1
 set-option -a terminal-features 'alacritty:RGB'
 set-option -wg monitor-activity on  # Monitor window activity
 
-# correct TERM colors
-set  -g default-terminal "tmux-256color"
+# correct TERM colorj
+set  -g default-terminal "tmux-255color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 # set status line colors
 set -g status-bg black
 set -g status-fg white
 
 ##### RELOAD CONFIG #####
-bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "~/Config reloaded"
 
 ##### VI COPY MODE #####
 set-window-option -g mode-keys vi
@@ -50,6 +50,17 @@ bind c new-window -c '#{pane_current_path}'         # New window in current dir
 bind S-Left swap-window -t -1 \; select-window -t -1
 bind S-Right swap-window -t +1 \; select-window -t +1
 
+# Number-based window reordering
+bind M-1 swap-window -t 1
+bind M-2 swap-window -t 2
+bind M-3 swap-window -t 3
+bind M-4 swap-window -t 4
+bind M-5 swap-window -t 5
+bind M-6 swap-window -t 6
+bind M-7 swap-window -t 7
+bind M-8 swap-window -t 8
+bind M-9 swap-window -t 9
+
 ##### SWITCH SESSIONS #####
 bind e display-popup -E "\
   tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
@@ -70,15 +81,30 @@ set -g window-status-current-format '#[fg=white,bold][#I:#W]'
 # Prefix indicator and session name on left
 set -g status-left "#{?client_prefix,#[bg=#565f89],#[bg=default]}[#{session_name}] "
 
-
 # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @continuum-restore 'on'
-# set -g @plugin 'omerxx/tmux-sessionX'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'jaclu/tmux-menus'
+# set -g @plugin 'sainnhe/tmux-fzf'
+
+set -g @continuum-restore 'on'
+
+# tmux-which-key configuration
+set -g @tmux-which-key-xdg-enable 1
+
+# tmux-menus configuration - trigger with C-a M (Meta/Alt + A then M)
+# set -g @menus_trigger 'm'
+
+# Keybindings for both menu systems
+# Show which-key with C-a C-a (press prefix twice)
+# bind C-a run-shell "tmux-which-key"
+
+# Show menus with C-a M-m (Alt+M after prefix)
+# bind M-m run-shell "~/.tmux/scripts/prefix-menu.sh"
+
+# set -g repeat-time 500
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run -b '~/.tmux/plugins/tpm/tpm'
+run "~/.config/tmux/plugins/tpm/tpm"
