--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -23,3 +23,6 @@ source = ~/.config/hypr/autostart.conf
 env = NVD_BACKEND,direct
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+# Toggle Anki Focus Mode
+bind = SUPER_SHIFT, F, exec, ~/.config/hypr/scripts/toggle-focus.sh
