Remove zoom command

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,10 +3,6 @@ set-option -g prefix C-a
 # Double prefix sends prefix to application
 bind C-a send-prefix
 
-##### PANE ZOOM #####
-unbind-key z
-bind f resize-pane -Z  # Toggle zoom with f
-
 ##### GENERAL SETTINGS #####
 set -g mouse on
 set -g history-limit 10000
@@ -19,7 +15,7 @@ set-environment -g 'IGNOREEOF' 1
 set-option -a terminal-features 'alacritty:RGB'
 set-option -wg monitor-activity on  # Monitor window activity
 
-# correct TERM colorj
+# correct TERM color
 set  -g default-terminal "tmux-255color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 # set status line colors
