--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
-.claude
-!claude/.claude
+claude/.claude/*
+!claude/.claude/commands/
+!claude/.claude/settings.json
+
 tmux/.config/tmux/plugins/
 
 # Local environment variables (sensitive)
