Update claude commands, add status line, remap hyperland monitors, add paths to PATH

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -79,8 +79,8 @@ set -g status-left "#{?client_prefix,#[bg=#565f89],#[bg=default]}[#{session_name
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'jaclu/tmux-menus'
 # set -g @plugin 'sainnhe/tmux-fzf'
