--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 claude/.claude/*
 !claude/.claude/commands/
+!claude/.claude/statusline.sh
 !claude/.claude/settings.json
 
 tmux/.config/tmux/plugins/
