Sync plugin config through Obisidan Sync, so now we can only upload the plugin config/metadata and not the plugin js/css itself

--- a/obsidian/.gitignore
+++ b/obsidian/.gitignore
@@ -1,2 +1,6 @@
 # Prevent filtering Github token
 github-copilot
+
+# Ignore Obsidian plugin code (downloaded by app, keep only config)
+**/plugins/**/main.js
+**/plugins/**/styles.css
