--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -5,7 +5,6 @@ $browser = omarchy-launch-browser
 bindd = SUPER, return, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, $browser
-bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
@@ -32,6 +31,11 @@ bind = SUPER SHIFT, K, movewindow, u
 bind = SUPER SHIFT, J, movewindow, d
 
 bind = SUPER, G, splitratio, -0.48
+
+bindd = SUPER, M, Screenshot with editing, exec, omarchy-cmd-screenshot
+bindd = SUPER SHIFT, M, Screenshot to clipboard, exec, omarchy-cmd-screenshot smart clipboard
+bindd = SUPER ALT, M, Screenrecording, exec, omarchy-menu screenrecord
+bindd = SUPER SHIFT ALT, M, Color picker, exec, pkill hyprpicker || hyprpicker -a
 
 
 # # Define which workspaces belong to which monitors
