Add missing paths

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -9,3 +9,8 @@ Host qtower
 Host orange
   Hostname orange-1
   User ubuntu
+
+Host nadeshiko-production
+  Hostname nadeshiko-production
+  User root
+  IdentityFile ~/.ssh/vps
