--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -50,7 +50,7 @@ cursor {
 }
 
 # Scroll faster in the terminal
-windowrule = scrolltouchpad 1.5, tag:terminal
+# windowrule = scrolltouchpad 1.5, tag:terminal
 
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
